add test for available-slot repo